--- a/extension/trunk/source/com/bedrock/extension/view/ExtensionView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/ExtensionView.mxml
@@ -2,6 +2,7 @@
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" creationComplete="this._initialize()" xmlns:view="com.bedrock.extension.view.*" xmlns:temp="com.bedrock.extension.project.view.temp.*" xmlns:extras="com.bedrock.extension.view.extras.*" xmlns:project="com.bedrock.extension.view.project.*" xmlns:misc="com.bedrock.extension.view.misc.*">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.framework.core.logging.LogLevel;
 			import com.greensock.easing.Circ;
 			import com.greensock.easing.Expo;
 			import com.greensock.TweenLite;
@@ -26,8 +27,9 @@
 			
 			private function _initialize():void
 			{
-				Logger.initialize();
-				Logger.addTarget( new JSFLLogger );
+				var logger:JSFLLogger = new JSFLLogger;
+				logger.initialize( LogLevel.DEBUG, 10 );
+				Logger.addTarget( logger );
 				
 				this._toggleButtons( false );
 				this._updateAutoHideMenu();
