--- a/extension/trunk/source/com/bedrock/extension/view/popups/ProjectCreationView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/ProjectCreationView.mxml
@@ -35,21 +35,23 @@
 				this.sourceFolderText.text = ExtensionController.getInstance().projectXML.sourceFolder;
 				this.deployFolderText.text = ExtensionController.getInstance().projectXML.deployFolder;
 				
+				this.templateCombo.selectedIndex = 0;
 			}
 			
 			private function selectLocation():void
 			{
 				this.projectPathText.text = ExtensionController.getInstance().selectProjectFolder();
-				this.updateProperties();
+				this._updateProject();
 			}
 			
-			private function updateFrameworkVersion():void
+			private function _updateFrameworkVersion():void
 			{
 				ExtensionController.getInstance().projectXML.frameworkVersion = this.frameworkVersionCombo.selectedLabel;
 				ExtensionController.getInstance().loadTemplates();
-				this.updateProperties();
+				this.templateCombo.selectedIndex = 0;
+				this._updateProject();
 			}
-			private function updateProperties():void
+			private function _updateProject():void
 			{
 				ExtensionController.getInstance().projectXML.@name = this.projectNameText.text;
 				ExtensionController.getInstance().projectXML.path = this.projectPathText.text;
@@ -63,6 +65,8 @@
 				ExtensionController.getInstance().projectXML.assetsFolder = this._sanitizeFolder( this.assetsFolderText.text );
 				ExtensionController.getInstance().projectXML.sourceFolder = this._sanitizeFolder( this.sourceFolderText.text );
 				ExtensionController.getInstance().projectXML.deployFolder = this._sanitizeFolder( this.deployFolderText.text );
+				
+				ExtensionController.getInstance().loadTemplate( this.templateCombo.selectedLabel );
 			}
 			private function _sanitizeFolder( $text:String ):String
 			{
@@ -70,7 +74,7 @@
 				return $text;
 			}
 			
-			private function generateProject():void
+			private function _generateProject():void
 			{
 				if ( ExtensionController.getInstance().generateProject() ) {
 					Alert.show( "Project creation complete!", "Attention!" );
@@ -94,7 +98,7 @@
 			<mx:Panel title="1. General" width="100%" height="100%">
 				<mx:Form width="100%" height="100%">
 					<mx:FormItem label="Name" width="100%">
-						<mx:TextInput id="projectNameText" width="100%" change="this.updateProperties()"/>
+						<mx:TextInput id="projectNameText" width="100%" change="this._updateProject()"/>
 					</mx:FormItem>
 					<mx:FormItem label="Location">
 						<mx:HBox>
@@ -110,19 +114,19 @@
 				<mx:Form >
 					<mx:FormItem label="Dimensions">
 						<mx:HBox horizontalGap="1">
-							<mx:TextInput width="40" id="widthText" change="this.updateProperties()"/>
+							<mx:TextInput width="40" id="widthText" change="this._updateProject()"/>
 							<mx:Label text="x" textAlign="center"/>
-							<mx:TextInput width="40" id="heightText" change="this.updateProperties()"/>
+							<mx:TextInput width="40" id="heightText" change="this._updateProject()"/>
 						</mx:HBox>
 					</mx:FormItem>
 					<mx:FormItem label="FPS">
-						<mx:TextInput text="30" id="fpsText" width="30" maxChars="2" change="this.updateProperties()"/>
+						<mx:TextInput text="30" id="fpsText" width="30" maxChars="2" change="this._updateProject()"/>
 					</mx:FormItem>
 					<mx:FormItem label="Stage Color">
-						<mx:ColorPicker id="colorPicker" change="this.updateProperties()"/>
+						<mx:ColorPicker id="colorPicker" change="this._updateProject()"/>
 					</mx:FormItem>
 					<mx:FormItem label="Publish Files">
-						<mx:CheckBox id="publishFilesCheck" change="this.updateProperties()" />
+						<mx:CheckBox id="publishFilesCheck" change="this._updateProject()" />
 					</mx:FormItem>
 					
 				</mx:Form>
@@ -136,13 +140,13 @@
 			<mx:Panel title="3. Framework" width="100%" height="100%" id="frameworkPanel" horizontalAlign="center">
 				<mx:Form height="100%">
 					<mx:FormItem label="Version" width="100%">
-						<mx:ComboBox id="frameworkVersionCombo" width="75" change="this.updateFrameworkVersion()" />
+						<mx:ComboBox id="frameworkVersionCombo" width="75" change="this._updateFrameworkVersion()" />
 					</mx:FormItem>
 					<mx:FormItem label="Root Package" direction="vertical">
-						<mx:TextInput id="rootPackageText" width="100%" change="this.updateProperties()"/>
+						<mx:TextInput id="rootPackageText" width="100%" change="this._updateProject()"/>
 					</mx:FormItem>
 					<mx:FormItem label="Template">
-						<mx:ComboBox id="templateCombo" change="this.updateProperties()" dataProvider="{ ExtensionController.getInstance().templates }"/>
+						<mx:ComboBox id="templateCombo" labelField="name" change="this._updateProject()" dataProvider="{ ExtensionController.getInstance().templates }"/>
 					</mx:FormItem>
 				</mx:Form>
 			</mx:Panel>
@@ -150,13 +154,13 @@
 			<mx:Panel title="4. Structure" width="100%" height="100%" id="structurePanel">
 				<mx:Form width="100%" height="100%">
 					<mx:FormItem label="Assets" width="100%" >
-						<mx:TextInput width="100%" text="assets" restrict="a-zA-Z0-9 " id="assetsFolderText" change="this.updateProperties()"/>
+						<mx:TextInput width="100%" text="assets" restrict="a-zA-Z0-9 " id="assetsFolderText" change="this._updateProject()"/>
 					</mx:FormItem>
 					<mx:FormItem label="Source" width="100%" >
-						<mx:TextInput width="100%" text="flash" restrict="a-zA-Z0-9 " id="sourceFolderText" change="this.updateProperties()"/>
+						<mx:TextInput width="100%" text="flash" restrict="a-zA-Z0-9 " id="sourceFolderText" change="this._updateProject()"/>
 					</mx:FormItem>
 					<mx:FormItem label="Deploy" width="100%" >
-						<mx:TextInput width="100%" text="wwwroot" restrict="a-zA-Z0-9 " id="deployFolderText" change="this.updateProperties()"/>
+						<mx:TextInput width="100%" text="wwwroot" restrict="a-zA-Z0-9 " id="deployFolderText" change="this._updateProject()"/>
 					</mx:FormItem>
 				</mx:Form>
 			</mx:Panel>
@@ -166,7 +170,7 @@
 		<mx:ControlBar>
 			<mx:Button label="Cancel" id="cancelUpdateButton" click="this.closePopup()" height="30" />
 			<mx:Spacer width="100%"/>
-			<mx:Button label="Generate Project" id="generateProjectButton" click="this.generateProject()" height="30"/>
+			<mx:Button label="Generate Project" id="generateProjectButton" click="this._generateProject()" height="30"/>
 		</mx:ControlBar>
 	</mx:Panel>
 		
