--- a/extension/trunk/source/com/bedrock/extension/view/project/AssetsView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/project/AssetsView.mxml
@@ -2,6 +2,7 @@
 <mx:HDividedBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" creationComplete="this.bootup()" styleName="padded5px" xmlns:misc="com.bedrock.extension.view.misc.*">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.extension.view.popups.SpecialAssetCreationView;
 			import com.bedrock.framework.engine.data.BedrockAssetData;
 			import mx.managers.PopUpManager;
 			import com.bedrock.extension.view.popups.AssetGroupCreationView;
@@ -33,6 +34,7 @@
             private var CreateIcon:Class;
             
            	private var _assetCreationView:AssetCreationView;
+           	private var _specialAssetCreationView:SpecialAssetCreationView;
             private var _assetGroupCreationView:AssetGroupCreationView;
             
 			public function bootup():void
@@ -41,6 +43,8 @@
 				
 				this._assetCreationView = new AssetCreationView;
 				this._assetCreationView.initialize();
+				this._specialAssetCreationView = new SpecialAssetCreationView;
+				this._specialAssetCreationView.initialize();
 				this._assetGroupCreationView = new AssetGroupCreationView;
 				this._assetGroupCreationView.initialize();
 				
@@ -54,6 +58,9 @@
             	switch( this.hierarchyControlBar.creationCombo.selectedItem.value ) {
             		case "asset" :
 						this._assetCreationView.populate( this.nodeTree.selectedItem as XML );
+            			break;
+            		case "specialAsset" :
+						this._specialAssetCreationView.populate();
             			break;
             		case "assetGroup" :
 						this._assetGroupCreationView.populate();
@@ -173,8 +180,10 @@
 				<mx:AdvancedDataGridColumn headerText="ID" dataField="@id" sortable="false" />
 				<mx:AdvancedDataGridColumn headerText="Type" dataField="@type" sortable="false"/>
 				<mx:AdvancedDataGridColumn headerText="Path" dataField="@path" sortable="false"/>
-				<mx:AdvancedDataGridColumn headerText="URL" dataField="@url" sortable="false"/>
-				<mx:AdvancedDataGridColumn headerText="Initial Load" resizable="false" sortable="false" dataField="" itemRenderer="com.bedrock.extension.view.cells.AssetGroupInitialLoadCell" />
+				<mx:AdvancedDataGridColumn headerText="Default URL" dataField="@defaultURL" sortable="false"/>
+				<mx:AdvancedDataGridColumn headerText="Alternate URL" dataField="@alternateURL" sortable="false"/>
+				<mx:AdvancedDataGridColumn headerText="Locale URL" dataField="@localeURL" sortable="false"/>
+				<mx:AdvancedDataGridColumn headerText="Initial Load" resizable="false" sortable="false" width="75" itemRenderer="com.bedrock.extension.view.cells.AssetGroupInitialLoadCell" />
 			</mx:columns>
 		</mx:AdvancedDataGrid>
 		<misc:HierarchyControlBar id="hierarchyControlBar" creationOptions="{ ProjectController.getInstance().resources.getBundle( 'assetCreationOptions' ) }" createNode="this.createNode()" deleteNode="this.deleteNode()" deselectNode="this._deselect()" duplicateNode="this._duplicate()" />
