--- a/extension/trunk/source/com/bedrock/extension/view/project/LocalesView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/project/LocalesView.mxml
@@ -2,11 +2,10 @@
 	<mx:Script>
 		<![CDATA[
 			import com.bedrock.extension.event.ExtensionEvent;
-			import com.bedrock.framework.core.dispatcher.BedrockDispatcher;
 			import mx.managers.PopUpManager;
 			import com.bedrock.extension.view.popups.LocaleCreationView;
 			import com.bedrock.extension.controller.ProjectController;
-			import com.bedrock.framework.core.logging.Logger;
+			import com.bedrock.framework.core.logging.BedrockLogger;
 			import com.bedrock.framework.engine.data.BedrockData;
 			import com.bedrock.framework.plugin.util.XMLUtil2;
 		
