--- a/extension/trunk/source/com/bedrock/extension/view/ExtensionView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/ExtensionView.mxml
@@ -2,6 +2,7 @@
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" creationComplete="this._initialize()" xmlns:view="com.bedrock.extension.view.*" xmlns:temp="com.bedrock.extension.project.view.temp.*" xmlns:extras="com.bedrock.extension.view.extras.*" xmlns:project="com.bedrock.extension.view.project.*" xmlns:misc="com.bedrock.extension.view.misc.*">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.framework.engine.Bedrock;
 			import com.bedrock.framework.core.logging.LogLevel;
 			import com.greensock.easing.Circ;
 			import com.greensock.easing.Expo;
@@ -14,8 +15,7 @@
 			import com.bedrock.extension.controller.ExtensionController;
 			import com.bedrock.extension.logging.JSFLLogger;
 			import mx.controls.Button;
-			import com.bedrock.framework.core.logging.Logger;
-			import com.bedrock.framework.core.dispatcher.BedrockDispatcher;
+			import com.bedrock.framework.core.logging.BedrockLogger;
 			import mx.events.ItemClickEvent;
 			
 			[Embed("assets/BedrockLogo.png")]
@@ -29,14 +29,14 @@
 			{
 				var logger:JSFLLogger = new JSFLLogger;
 				logger.initialize( LogLevel.DEBUG, 10 );
-				Logger.addTarget( logger );
+				Bedrock.logger.addTarget( logger );
 				
 				this._toggleButtons( false );
 				this._updateAutoHideMenu();
 				
-				BedrockDispatcher.addEventListener( ExtensionEvent.PROJECT_CREATED, this._onProjectCreated );
-				BedrockDispatcher.addEventListener( ExtensionEvent.PROJECT_LOADED, this._onProjectLoaded );
-				BedrockDispatcher.addEventListener( ExtensionEvent.SETTINGS_SAVED, this._onSettingsSaved );
+				Bedrock.dispatcher.addEventListener( ExtensionEvent.PROJECT_CREATED, this._onProjectCreated );
+				Bedrock.dispatcher.addEventListener( ExtensionEvent.PROJECT_LOADED, this._onProjectLoaded );
+				Bedrock.dispatcher.addEventListener( ExtensionEvent.SETTINGS_SAVED, this._onSettingsSaved );
 				
 				this._extensionSettingsView = new ExtensionSettingsView;
 				this._extensionSettingsView.initialize();
@@ -138,7 +138,7 @@
 			</mx:ToggleButtonBar>
 		</mx:HBox>
 		
-		<mx:HBox x="0" y="0" width="100%" height="55" verticalAlign="middle" horizontalAlign="center" backgroundColor="#095d77">
+		<mx:HBox x="0" y="0" width="100%" height="55" verticalAlign="middle" horizontalAlign="center" backgroundColor="#772309">
 			<mx:Spacer width="100%"/>
 			<mx:Button skin="{ HeaderBackground }" width="412" height="55"/>
 			<mx:Spacer width="100%"/>
