--- a/extension/trunk/source/com/bedrock/extension/view/misc/AttributeEditor.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/misc/AttributeEditor.mxml
@@ -5,7 +5,7 @@
 			import com.bedrock.extension.event.ExtensionEvent;
 			import com.bedrock.extension.controller.ProjectController;
 			import com.bedrock.framework.plugin.util.XMLUtil2;
-			import com.bedrock.framework.core.logging.Logger;
+			import com.bedrock.framework.core.logging.BedrockLogger;
 			import mx.collections.ArrayCollection;
 			
 			[Embed("assets/CreateIcon.png")]
