--- a/extension/trunk/source/com/bedrock/extension/view/popups/AssetCreationView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/AssetCreationView.mxml
@@ -2,8 +2,9 @@
 <GenericProjectPopupView xmlns="com.bedrock.extension.view.popups.*" xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" xmlns:misc="com.bedrock.extension.view.misc.*">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.extras.cloner.Cloner;
 			import com.bedrock.framework.plugin.util.ArrayUtil;
-			import com.bedrock.framework.core.logging.Logger;
+			import com.bedrock.framework.core.logging.BedrockLogger;
 			import com.bedrock.extension.controller.ProjectController;
 			import mx.managers.PopUpManager;
 			
@@ -29,13 +30,14 @@
             		assetXML.@localeURL = this.localeURLText.text;
             		assetXML.@localeEnabled = this.localeEnabledCheck.selected;
             		
+            		ProjectController.getInstance().config.updateBytes( assetXML );
+            		
 	            	var groupXML:XML = ProjectController.getInstance().config.assets..assetGroup.( @id == this.assetGroupCombo.selectedLabel )[ 0 ];
 					groupXML.appendChild( assetXML );
 					
 	            	this.closePopup( true );
             	}
             }
-            
 			
 		]]>
 	</mx:Script>
