--- a/extension/trunk/source/com/bedrock/extension/view/popups/ContentDeletionView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/ContentDeletionView.mxml
@@ -2,8 +2,8 @@
 <GenericProjectPopupView xmlns="com.bedrock.extension.view.popups.*" xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" xmlns:misc="com.bedrock.extension.view.misc.*">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.framework.engine.Bedrock;
 			import com.bedrock.extension.event.ExtensionEvent;
-			import com.bedrock.framework.core.dispatcher.BedrockDispatcher;
 			import mx.managers.PopUpManager;
 			
 			public var selectedID:String;
@@ -22,7 +22,7 @@
 				detailsXML.deleteSWF = this.deleteSWFCheck.selected;
 				detailsXML.deleteDocumentClass = this.deleteDocumentClassCheck.selected;
 				
-				BedrockDispatcher.dispatchEvent( new ExtensionEvent( ExtensionEvent.DELETE_CONTENT_CONFIRMED, this, detailsXML ) );
+				Bedrock.dispatcher.dispatchEvent( new ExtensionEvent( ExtensionEvent.DELETE_CONTENT_CONFIRMED, this, detailsXML ) );
 				
 				this.closePopup( true );
 			}
