--- a/extension/trunk/source/com/bedrock/extension/view/popups/GenericProjectPopupView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/GenericProjectPopupView.mxml
@@ -2,7 +2,7 @@
 <mx:Box xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%">
 	<mx:Script>
 		<![CDATA[
-			import com.bedrock.framework.engine.BedrockEngine;
+			import com.bedrock.framework.engine.Bedrock;
 			import com.bedrock.extension.event.ExtensionEvent;
 			import com.bedrock.extension.controller.ProjectController;
 			import mx.managers.PopUpManager;
