--- a/extension/trunk/source/com/bedrock/extension/view/project/BrowserView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/project/BrowserView.mxml
@@ -2,11 +2,12 @@
 <mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" initialize="this.bootup()" styleName="padded5px" xmlns:view="com.bedrock.extension.base.view.*">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.framework.engine.Bedrock;
+			import com.bedrock.framework.engine.data.BedrockData;
 			import com.bedrock.framework.plugin.util.VariableUtil;
 			import com.bedrock.extension.controller.ProjectController;
 			import com.bedrock.extension.event.ExtensionEvent;
-			import com.bedrock.framework.core.dispatcher.BedrockDispatcher;
-			import com.bedrock.framework.core.logging.Logger;
+			import com.bedrock.framework.core.logging.BedrockLogger;
 			import mx.collections.HierarchicalData;
 			import mx.controls.Alert;
 			import mx.events.ListEvent;
@@ -30,11 +31,16 @@
             private var TrashIcon:Class;
             [Embed("assets/UpdateIcon.png")]
             private var UpdateIcon:Class;
+            [Embed("assets/TogglePublishIcon.png")]
+            private var TogglePublishIcon:Class;
+            
+            private var _toggleStatus:Boolean;
            
             
 			private function bootup():void
 			{
-				BedrockDispatcher.addEventListener( ExtensionEvent.PROJECT_REFRESH, this._onProjectRefresh );
+				this._toggleStatus = false;
+				Bedrock.dispatcher.addEventListener( ExtensionEvent.PROJECT_REFRESH, this._onProjectRefresh );
 				this._applyIcons();
 			}
 			
@@ -60,12 +66,22 @@
 				
             }
             
+            private function _togglePublish():void
+            {
+            	for each( var flaXML:XML in ProjectController.getInstance().projectXML..file ) {
+            		if ( flaXML.@name != BedrockData.SHELL ) {
+            			flaXML.@publish = this._toggleStatus;
+            		}	
+            	}
+            	this._toggleStatus = !this._toggleStatus;
+            	this._refreshContents();
+            }
             
-			private function refreshContents():void
+			private function _refreshContents():void
 			{
 				ProjectController.getInstance().browser.refresh();
 			}
-			private function deleteFile():void
+			private function _deleteFile():void
 			{
 				Alert.show("Are you sure you want to delete \"" + this.fileTree.selectedItem.@name + "\"?","Warning!", Alert.OK|Alert.CANCEL,this, this.onDeleteConfirmation, null, Alert.OK);
 			}
@@ -117,10 +133,11 @@
 		
 		<!--<mx:Tree id="fileTree" width="100%" showRoot="false" height="100%" labelField="@name" dataProvider="{ ApplicationController.getInstance().project.files }"/>-->
 		<mx:ControlBar horizontalAlign="left">
-			<mx:Button click="this.refreshContents()" id="refreshButton" icon="{ RefreshIcon }"/>
-			<mx:Button click="this.deleteFile()" id="deleteButton" icon="{ TrashIcon }"/>
+			<mx:Button click="this._refreshContents()" id="refreshButton" icon="{ RefreshIcon }"/>
+			<mx:Button click="this._deleteFile()" id="deleteButton" icon="{ TrashIcon }"/>
+			<mx:Button click="this._togglePublish()" id="togglePublishButton" icon="{ TogglePublishIcon }"/>
 			<mx:Spacer width="100%"/>
-			<mx:Button click="BedrockDispatcher.dispatchEvent( new ExtensionEvent( ExtensionEvent.PROJECT_UPDATE, this ) )" id="updateButton" icon="{ UpdateIcon }" toolTip="Update Project"/>
+			<mx:Button click="Bedrock.dispatcher.dispatchEvent( new ExtensionEvent( ExtensionEvent.PROJECT_UPDATE, this ) )" id="updateButton" icon="{ UpdateIcon }" toolTip="Update Project"/>
 		</mx:ControlBar>
 	</mx:Panel>
 	
